@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Activate cards</string>
+   <string>(De)activate cards</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
